--- a/conf/application.properties
+++ b/conf/application.properties
@@ -1,7 +1,10 @@
-server.port=8000
-
+server.port=8080
 # DB
+spring.datasource.url=jdbc:mysql://sql12.freemysqlhosting.net:3306/sql12314167?user=sql12314167
+spring.datasource.username=sql12314167
+spring.datasource.password=8ZCBFsFdGP
+spring.main.allow-bean-definition-overriding=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# HTTP
 
-# API URL
+
